--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -139,9 +139,10 @@ La chaîne d'acquisition se compose de plus de trente capteurs. Tous ne sont pas
     \label{fig:TCdansNoyau}
 \end{figure}
 
-\paragraph*{Pression dynamique} Quatre sondes piézoélectriques (PCB Piezotronics, 113B28) captent les oscillations de pression dans la pompe à chaleur. Deux sont placées à l'arrière de chacune des sources acoustiques, et les deux autres dans le canal de rétroaction de la cavité thermoacoustique. Les capteurs sont ensuite connectés à une carte d'acquisition (National Instruments, NI9234). Ces sondes doivent supporter la pression statique élevée à l'intérieur de la machine, ainsi que l'amplitude acoustique nécessaire au processus thermoacoustique. De plus, elles doivent être affleurantes aux parois auxquelles elles sont montées, ce qui empêche leur installation au sein du noyau. Toutefois, la longueur d'onde dans le mélange de gaz vaut $\lambda=\qty{11.7}{\meter}$ à la fréquence de fonctionnement $f=\qty{47}{\hertz}$ et est suffisamment grande pour garantir une amplitude de pression constante dans toute la machine.
+\paragraph*{Pression dynamique} Quatre sondes piézoélectriques (PCB Piezotronics, 113B28) captent les oscillations de pression dans la pompe à chaleur. Deux sont placées à l'arrière de chacune des sources acoustiques, et les deux autres dans le canal de rétroaction de la cavité thermoacoustique. Les capteurs sont ensuite connectés à une carte d'acquisition (National Instruments, NI9234). 
+%Toutefois, la longueur d'onde dans le mélange de gaz vaut $\lambda=\qty{11.7}{\meter}$ à la fréquence de fonctionnement $f=\qty{47}{\hertz}$ et est suffisamment grande pour garantir une amplitude de pression constante dans toute la machine.
 
-\paragraph*{Pression statique} Deux capteurs (Endress, Cerabar PMP21) sont connectés sur les deux tuyaux d'alimentation en gaz de la pompe  à chaleur d'un côté, et sur une carte d'acquisition (National Instruments, NI9234) de l'autre. Les arrivées de gaz se trouvent de part et d'autre de la source acoustique principale et on pour but d'éviter une surpression sur sa face avant ou arrière et son endommagement.
+\paragraph*{Pression statique} Deux capteurs (Endress, Cerabar PMP21) sont connectés sur les deux tuyaux d'alimentation en gaz de la pompe  à chaleur d'un côté, et sur une carte d'acquisition (National Instruments, NI9234) de l'autre. Les arrivées de gaz se trouvent de part et d'autre de la source acoustique principale et ont pour but d'éviter une surpression sur sa face avant ou arrière et son endommagement.
 
 \paragraph*{Puissance extraite par l'échangeur ambiant} Le fonctionnement de cet échangeur est détaillé dans l'annexe~\ref{chap:AHX}. Pour déterminer la quantité de chaleur extraite du côté ambiant du noyau, la différence de température entre l'entrée d'eau de l'échangeur et sa sortie d'eau est mesurée grâce à deux sondes de platine PT100 connectées sur une carte d'acquisition (National Instruments, NI9217).
 
