Corrigé eq NavierStokes

--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -11,7 +11,7 @@ Après avoir brièvement rappelé les bases de fonctionnement des machines therm
 \section{Présentation du dispositif expérimental actuel}\label{chap:PresentationTacot}
 
 \subsection{Résultats déjà obtenus}\label{chap:PresTacot_ResultatsATE}
-\echaf{Quelques résultats. À mettre dans l'intro I ?} Au démarrage de cette thèse, le réfrigérateur existe déjà et sa caractérisation est publiée \cite{ramadan_design_2021}. Dans cet article, il est montré que la fréquence de fonctionnement offrant les meilleures performances est $f~=~\qty{47}{\hertz}$, soit la première fréquence de résonance du système, et avec un déphasage inter-sources $\phi_{2-1}~=~\qty{-60}{\degree}$. À ce point de fonctionnement et à une puissance d'alimentation des sources $\dot W_e~=~\qty{193}{\watt}$ soit un \textit{drive ratio} $DR~=~\qty{3.6}{\percent}$, une quantité de chaleur de $\dot Q_f~=~\qty{290}{\watt}$ est extraite à la source froide dont la température est $T_a~=~\qty{15}{\degreeCelsius}$. Le coefficient de performance est $\COP=\num{1.5}$, soit \qty{15}{\percent} du coefficient de performance de Carnot \cite{ramadan_design_2021}. \echaf{ajouter figures des écarts mesures-modèle DeltaEC}
+\echaf{Quelques résultats. À mettre dans l'intro I ?} Au démarrage de cette thèse, le réfrigérateur existe déjà et sa caractérisation est publiée \cite{ramadan_design_2021}, et fait également l'objet d'études expérimentales~\cite{ramadan_experimental_2018, ramadan_experimental_2021} et  numériques~\cite{hireche_numerical_2019, hireche_experimental_2020,}. Dans cet article, il est montré que la fréquence de fonctionnement offrant les meilleures performances est $f=\qty{47}{\hertz}$, soit la première fréquence de résonance du système, et avec un déphasage inter-sources $\phi_{2-1}=\qty{-60}{\degree}$. À ce point de fonctionnement et à une puissance d'alimentation des sources $\dot W_e=\qty{193}{\watt}$ soit un \textit{drive ratio} $DR=\qty{3.6}{\percent}$, une quantité de chaleur de $\dot Q_f=\qty{290}{\watt}$ est extraite à la source froide dont la température est $T_a=\qty{15}{\degreeCelsius}$. Le coefficient de performance est $\COP=\num{1.5}$, soit \qty{15}{\percent} du coefficient de performance de Carnot. \echaf{ajouter figures des écarts mesures-modèle DeltaEC}
 
 \subsection{Géométrie du réfrigérateur \textsc{Tacot}}
 \subsubsection{Cavité thermoacoustique}
