--- a/tex/EnsembleSimus.tex
+++ b/tex/EnsembleSimus.tex
@@ -120,7 +120,8 @@ Le modèle 2D simplifié d'une cavité différentiellement chauffée ne prend pa
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics{../fig/fig_ConvNatComsol/Comsol_SimplifiedModel_Geometry5.png}
+    \external{fig_Comsol_ModeleSimplifie_Geometrie}
+    \tikz{\draw(0,0) node{\includegraphics{../fig/fig_ConvNatComsol/Comsol_SimplifiedModel_Geometry5.png}};}
     \caption{Géométrie du modèle simplifié du régénérateur et de la cavité d'adaptation d'impédance.}
     \label{fig:Comsol_ModeleSimplifie_Geometrie}
 \end{figure}
