--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -19,7 +19,7 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_Tf}
 		\caption{}
 		\label{fig:PerfConvNat_Tf}
-	\end{subfigure}		
+	\end{subfigure}%
 	\begin{subfigure}[b]{.48\textwidth}
 		\centering
 		\external{fig_PerfConvNat_Ta}
@@ -27,7 +27,8 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_Ta}
 		\caption{}
 		\label{fig:PerfConvNat_Ta}
-	\end{subfigure}
+	\end{subfigure}\vspace{1cm}
+	
 	\begin{subfigure}[b]{.48\textwidth}
 		\centering
 		\external{fig_PerfConvNat_Qa}
@@ -35,7 +36,7 @@ Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:Orie
         \input{../fig/fig_PerfConvNat/tex/fig_PerfConvNat_Qa}
 		\caption{}
 		\label{fig:PerfConvNat_Qa}
-	\end{subfigure}	 
+	\end{subfigure}% 
 	\begin{subfigure}[b]{.48\textwidth}
 		\centering
 		\external{fig_PerfConvNat_COP}
@@ -71,6 +72,7 @@ L'échangeur ambiant extrait la chaleur des volumes élémentaires de gaz qui os
 		\caption{}
 		\label{fig:PerfConvNat_Ta_DR2}
 	\end{subfigure}
+	
 	\begin{subfigure}[b]{.48\textwidth}
 		\centering
 		\external{fig_PerfConvNat_Qa_DR2}
