--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -280,12 +280,16 @@ Ainsi, les systèmes électro-mécano-acoustiques comme les haut-parleurs ou les
 %    \label{fig:HP_LEM}
 %\end{figure}
 
+{
+  \tikzsetfigurename{fig_AnalogiesElectroac}
 \paragraph{Analogies électro-mécaniques}
-
+\echaf{blabla}
 
 \paragraph{Analogies acousto-mécaniques}
+\echaf{blabla}
 
 \paragraph{Résumé des analogies}
+\echaf{blabla}
 
 \begin{table}[!ht]
 	\caption{Analogies électro-mécano-acoustiques}
@@ -295,11 +299,12 @@ Ainsi, les systèmes électro-mécano-acoustiques comme les haut-parleurs ou les
 	\hline
 	\multicolumn{3}{|c|}{Domaines} \\\hline
 	Acoustique & Mécanique & \'Electrique \\
-	\tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} &  &  \\
+	\tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} & \tikz{\draw(0,0) -- ++(1,0);\draw(0,.5) -- ++(1,0);} \\
 	\hline
 	
 	\end{tabular}
 \end{table}
+}
 
 \subsubsection{Circuit électrique équivalent à un noyau thermoacoustique}
 
