--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -29,7 +29,7 @@
         $p$ & Pression acoustique \\
         $\Peclet$ & Nombre de Péclet \\
         $\Prandtl$ & Nombre de Prandtl \\
-        $\mathbf{e}_r$ & Coordonnée radiale dans le noyau \\
+        $\mathbf{e}_r$ & Vecteur unitaire transverse du noyau \\
         $R_{\sf reg}$ & Rayon du régénérateur, $R_{\sf reg}=\qty{74}{\milli\meter}$ \\
         $\Rayleigh$ & Nombre de Rayleigh \\
         $r_h$ & Rayon hydraulique des pores du régénérateur \\
@@ -38,7 +38,8 @@
         $u$ & Débit acoustique \\
         $v$ & Vitesse acoustique \\
         $W_e$ & Puissance électrique consommée par les sources acoustiques \\
-        $\mathbf{e}_x$ & Coordonnée axiale dans le noyau \\
+        $\mathbf{e}_x$ & Vecteur unitaire axial du noyau \\
+        $\mathbf e_{x0}$ & \echaf{définir} \\
         $Q_c$ & Flux de chaleur extrait par l'eau circulant dans l'échangeur ambiant \\
         $Q_f$ & Flux de chaleur apporté par les résistances chauffantes dans l'échangeur froid\\
     \end{longtable}
